--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h2>hello world keb</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/basscss.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>keb</title>
+</head>
+<body>
+    <body class="max-width-3 mx-auto py3 px3">
+        <div class="p1">
+            <img src="img/pic.jpg" alt="pic" class="rounded">
+        </div>
+        
+        <div class="p1">
+            <h2>keb</h2>
+            <p>welcome to my site. i write code and play games.</p>
+            <p>you can contact me at <a href="mailto:keb@pm.me">keb@pm.me</a></p>
+        </div>
+
+        <div class="p1">
+            <p>i can also be found at these places:</p>
+            <ul>
+                <li><a href="https://write.as/keb/">write.as/keb</a></li>
+                <li><a href="https://mastodon.social/@keb">mastodon.social/@keb</a></li>
+                <li><a href="https://streak.club/u/keb">streak.club/u/keb</a></li>
+                <li><a href="https://gitlab.com/kebg">gitlab.com/kebg</a></li>
+                <li><a href="https://www.gog.com/u/kebg">gog.com/u/kebg</a></li>
+                <li><a href="https://steamcommunity.com/id/kebsteam">steamcommunity.com/id/kebsteam</a></li>
+            </ul>
+        </div>
+    </body>
+</body>
+</html>
