--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="https://mastodon.social/@keb">mastodon.social/@keb</a></li>
                 <li><a href="https://streak.club/u/keb">streak.club/u/keb</a></li>
                 <li><a href="https://gitlab.com/kebg">gitlab.com/kebg</a></li>
+                <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
                 <li><a href="https://www.gog.com/u/kebg">gog.com/u/kebg</a></li>
                 <li><a href="https://steamcommunity.com/id/kebsteam">steamcommunity.com/id/kebsteam</a></li>
             </ul>
