css changes; added now deployment script

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>keb</title>
 </head>
 <body>
-    <body class="max-width-3 mx-auto py3 px3">
+    <body class="fade-in max-width-3 mx-auto py3 px3">
         <div class="p1">
             <img src="img/pic.jpg" alt="pic" class="rounded">
         </div>
