--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="p1">
             <h2>keb</h2>
             <p>welcome to my site. i write code and play games.</p>
-            <p>you can contact me at <a href="mailto:keb@pm.me">keb@pm.me</a></p>
+            <p>you can contact me at <a href="mailto:keb@disroot.org">keb@disroot.org</a></p>
         </div>
 
         <div class="p1">
