update git page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="https://rwtxt.com/keb/">rwtxt.com/keb</a></li>
                 <li><a href="https://mastodon.social/@keb">mastodon.social/@keb</a></li>
-                <li><a href="https://gitlab.com/kebg">gitlab.com/kebg</a></li>
+                <li><a href="https://github.com/keb">github.com/keb</a></li>
                 <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
                 <li><a href="https://last.fm/user/kebfm">last.fm/user/kebfm</a></li>
                 <li><a href="https://www.gog.com/u/kebg">gog.com/u/kebg</a></li>
