update mastodon link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>i can also be found at these places:</p>
             <ul>
                 <li><a href="https://rwtxt.com/keb/">rwtxt.com/keb</a></li>
-                <li><a href="https://mastodon.social/@keb">mastodon.social/@keb</a></li>
+                <li><a href="https://mas.to/@keb">mas.to/@keb</a></li>
                 <li><a href="https://github.com/keb">github.com/keb</a></li>
                 <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
                 <li><a href="https://last.fm/user/kebfm">last.fm/user/kebfm</a></li>
