--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<p>test</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/basscss.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>keb</title>
+</head>
+<body>
+    <body class="fade-in max-width-3 mx-auto py3 px3">
+        <div class="p1">
+            <img src="img/pic.jpg" alt="pic" class="rounded">
+        </div>
+        
+        <div class="p1">
+            <h2>keb</h2>
+            <p>welcome to my site. i write code and play games.</p>
+            <p>you can contact me at <a href="mailto:keb@disroot.org">keb@disroot.org</a></p>
+        </div>
+
+        <div class="p1">
+            <p>i can also be found at these places:</p>
+            <ul>
+                <li><a href="https://rwtxt.com/keb/">rwtxt.com/keb</a></li>
+                <li><a href="https://mas.to/@keb">mas.to/@keb</a></li>
+                <li><a href="https://github.com/keb">github.com/keb</a></li>
+                <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
+                <li><a href="https://last.fm/user/kebfm">last.fm/user/kebfm</a></li>
+                <li><a href="https://www.gog.com/u/kebg">gog.com/u/kebg</a></li>
+                <li><a href="https://steamcommunity.com/id/kebsteam">steamcommunity.com/id/kebsteam</a></li>
+            </ul>
+        </div>
+    </body>
+</body>
+</html>
